--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 MONGO_USER=alireza-asghari
 MONGO_PASS=Alirezaz1234
 MONGO_URI=mongodb+srv://${MONGO_USER}:${MONGO_PASS}@2a-project.zy7qvab.mongodb.net/todo-app?retryWrites=true&w=majority&appName=2A-project
+NEXTAUTH_SECRET=gsa??ffg!!ss?5hfgsdygdshnjvbcajsbva!?
