--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.34.2",
+    "@tanstack/react-query-devtools": "^5.35.1",
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "mongoose": "^8.3.3",
@@ -17,6 +18,7 @@
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1"
   },
   "devDependencies": {
